@@ -54,7 +54,6 @@
       <artifactId>jetty-http-tools</artifactId>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-slf4j-impl</artifactId>
@@ -69,7 +68,6 @@
         <configuration>
           <reuseForks>true</reuseForks>
           <argLine>@{argLine} ${jetty.surefire.argLine}
-            --add-modules org.eclipse.jetty.util.ajax
             --add-reads org.eclipse.jetty.ee9.servlet=org.eclipse.jetty.logging</argLine>
         </configuration>
       </plugin>
